# SamarthAI

./: .dockerignore  .gitignore  Dockerfile  README.md  agents.md  api.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py  ui.py
.github/workflows/: ci.yml
core/: config.py  i18n.py  security.py
db/: database.py
prompts/: extract_pdf.md  feedback.md  improve_resume.md  match_score.md  parse_job.md  parse_resume.md  skills_gap.md
templates/: base.html  index.html
templates/analysis/: index.html
templates/applications/: detail.html  index.html
templates/auth/: login.html  register.html
templates/dashboard/: jobseeker.html  recruiter.html
templates/jobs/: create.html  detail.html  edit.html  index.html
templates/resumes/: create.html  detail.html  index.html
templates/skills_gap/: index.html
tests/: conftest.py  test_api.py  test_i18n.py  test_schemas.py  test_security.py  test_services.py
