[project]
name = "samarth-ai"
version = "0.2.0"
description = "AI-driven resume and job matching platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic[email]>=2.11.7",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.44",
  "aiosqlite>=0.21.0",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "httpx>=0.28.1",
  "aiofiles>=24.1.0",
  "pypdf>=6.1.3",
  "python-docx>=1.2.0",
  "google-genai>=1.33.0",
  "openai>=2.11.0",
  "jinja2>=3.1.6",
  "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
]
lint = [
  "ruff>=0.13.0",
]
type = [
  "ty>=0.0.18",
]
test = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[tool.uv]
default-groups = ["dev", "lint", "type", "test"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.terminal]
output-format = "concise"
error-on-warning = true

[tool.ty.rules]
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
deprecated = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
