[project]
name = "samarth-ai"
version = "0.3.0"
description = "AI-driven resume and job matching platform"
readme = "README.md"
authors = [{ name = "pranam-s" }]
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic[email]>=2.11.0",
  "pydantic-settings>=2.9.0",
  "sqlalchemy>=2.0.40",
  "aiosqlite>=0.21.0",
  "asyncpg>=0.30.0",
  "bcrypt>=4.2.0",
  "python-multipart>=0.0.20",
  "httpx>=0.28.1",
  "aiofiles>=24.1.0",
  "pypdf>=6.0.0",
  "python-docx>=1.1.0",
  "google-genai>=1.14.0",
  "openai>=1.70.0",
  "jinja2>=3.1.6",
  "itsdangerous>=2.2.0",
  "pyjwt[cryptography]>=2.9.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.1.0",
  "httpx>=0.28.1",
]
lint = [
  "ruff>=0.11.0",
]
type = [
  "ty>=0.0.1a10",
]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "httpx>=0.28.1",
]

[tool.uv]
default-groups = ["dev", "lint", "type", "test"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.terminal]
output-format = "concise"
error-on-warning = true

[tool.ty.rules]
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
deprecated = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
